--- a/programs/solana-nft-anchor/Cargo.toml
+++ b/programs/solana-nft-anchor/Cargo.toml
@@ -9,14 +9,14 @@ crate-type = ["cdylib", "lib"]
 name = "solana_nft_anchor"
 
 [features]
-default = []
-cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+cpi = ["no-entrypoint"]
+default = []
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
-anchor-spl = { version = "0.30.1", features = ["metadata"] }
+anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+anchor-spl = { version = "0.29.0", features = ["metadata"] }
 mpl-token-metadata = "4.0.0"
+ahash = "=0.8.6"
